Update environment configuration and enhance README with author management and Supabase integration details. Refactor book and chapter retrieval to use Supabase, add author allowlist functionality, and improve navigation links in the library. Remove legacy reader page and update database schema for authors and chapters.

--- a/env.example
+++ b/env.example
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=your_sb_publishable_key
+SUPABASE_SECRET_KEY=your_sb_secret_key
+AUTHOR_EMAILS=your_email@example.com
